--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>Memory Game</h1>
+    <div id="game-info">
+        <p>Time: <span id="timer">0</span> seconds</p>
+        <p>Moves: <span id="moves">0</span></p>
+    </div>
+    <button id="restart-button">Restart Game</button>
     <div class="game-board" id="game-board"></div>
+    <div id="end-game-message" class="hidden"></div>
     <script src="script.js"></script>
 </body>
 </html>
-    
