--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <h2>Leaderboard</h2>
         <ul id="leaderboard-list"></ul>
     </div>
+    <div id="profile-section">
+        <h2>User Profile</h2>
+        <input type="text" id="profile-name" placeholder="Enter your name">
+        <button id="save-profile">Save Profile</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
